; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_eata.c_eata2x_queuecommand.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_eata.c_eata2x_queuecommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_cmnd = type { i8*, void (%struct.scsi_cmnd*)*, i32, i32, %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i64, i32, i32, i32, i32, %struct.Scsi_Host* }
%struct.Scsi_Host = type { i32, i32, i64 }
%struct.hostdata = type { i32, i64*, i32, %struct.mscp*, i32 }
%struct.mscp = type { i32, i32, i32, i32, i32, i32, i32, %struct.scsi_cmnd*, i32, i32, i32, i32 }

@.str = private unnamed_addr constant [46 x i8] c"%s: qcomm, pid %ld, SCpnt %p already active.\0A\00", align 1
@FREE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [29 x i8] c"%s: qcomm, no free mailbox.\0A\00", align 1
@CP_TAIL_SIZE = common dso_local global i64 0, align 8
@do_trace = common dso_local global i64 0, align 8
@KERN_INFO = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [26 x i8] c"qcomm, mbox %d, pid %ld.\0A\00", align 1
@linked_comm = common dso_local global i64 0, align 8
@READY = common dso_local global i64 0, align 8
@SEND_CP_DMA = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [31 x i8] c"qcomm, pid %ld, adapter busy.\0A\00", align 1
@IN_USE = common dso_local global i64 0, align 8
@TYPE_TAPE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.scsi_cmnd*, void (%struct.scsi_cmnd*)*)* @eata2x_queuecommand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eata2x_queuecommand(%struct.scsi_cmnd* %0, void (%struct.scsi_cmnd*)* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.scsi_cmnd*, align 8
  %5 = alloca void (%struct.scsi_cmnd*)*, align 8
  %6 = alloca %struct.Scsi_Host*, align 8
  %7 = alloca %struct.hostdata*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.mscp*, align 8
  store %struct.scsi_cmnd* %0, %struct.scsi_cmnd** %4, align 8
  store void (%struct.scsi_cmnd*)* %1, void (%struct.scsi_cmnd*)** %5, align 8
  %11 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %12 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %11, i32 0, i32 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 5
  %15 = load %struct.Scsi_Host*, %struct.Scsi_Host** %14, align 8
  store %struct.Scsi_Host* %15, %struct.Scsi_Host** %6, align 8
  %16 = load %struct.Scsi_Host*, %struct.Scsi_Host** %6, align 8
  %17 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %16, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to %struct.hostdata*
  store %struct.hostdata* %19, %struct.hostdata** %7, align 8
  %20 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %21 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %33

24:                                               ; preds = %2
  %25 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %26 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %25, i32 0, i32 4
  %27 = load i32, i32* %26, align 8
  %28 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %29 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %32 = call i32 @panic(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %27, i32 %30, %struct.scsi_cmnd* %31)
  br label %33

33:                                               ; preds = %24, %2
  %34 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %35 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %8, align 4
  store i32 0, i32* %9, align 4
  br label %38

38:                                               ; preds = %66, %33
  %39 = load i32, i32* %9, align 4
  %40 = load %struct.Scsi_Host*, %struct.Scsi_Host** %6, align 8
  %41 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = icmp ult i32 %39, %42
  br i1 %43, label %44, label %71

44:                                               ; preds = %38
  %45 = load i32, i32* %8, align 4
  %46 = load %struct.Scsi_Host*, %struct.Scsi_Host** %6, align 8
  %47 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 8
  %49 = icmp uge i32 %45, %48
  br i1 %49, label %50, label %51

50:                                               ; preds = %44
  store i32 0, i32* %8, align 4
  br label %51

51:                                               ; preds = %50, %44
  %52 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %53 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %52, i32 0, i32 1
  %54 = load i64*, i64** %53, align 8
  %55 = load i32, i32* %8, align 4
  %56 = zext i32 %55 to i64
  %57 = getelementptr inbounds i64, i64* %54, i64 %56
  %58 = load i64, i64* %57, align 8
  %59 = load i64, i64* @FREE, align 8
  %60 = icmp eq i64 %58, %59
  br i1 %60, label %61, label %65

61:                                               ; preds = %51
  %62 = load i32, i32* %8, align 4
  %63 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %64 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %63, i32 0, i32 0
  store i32 %62, i32* %64, align 8
  br label %71

65:                                               ; preds = %51
  br label %66

66:                                               ; preds = %65
  %67 = load i32, i32* %9, align 4
  %68 = add i32 %67, 1
  store i32 %68, i32* %9, align 4
  %69 = load i32, i32* %8, align 4
  %70 = add i32 %69, 1
  store i32 %70, i32* %8, align 4
  br label %38

71:                                               ; preds = %61, %38
  %72 = load i32, i32* %9, align 4
  %73 = load %struct.Scsi_Host*, %struct.Scsi_Host** %6, align 8
  %74 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 8
  %76 = icmp eq i32 %72, %75
  br i1 %76, label %77, label %82

77:                                               ; preds = %71
  %78 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %79 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %78, i32 0, i32 4
  %80 = load i32, i32* %79, align 8
  %81 = call i32 @printk(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i32 %80)
  store i32 1, i32* %3, align 4
  br label %231

82:                                               ; preds = %71
  %83 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %84 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %83, i32 0, i32 3
  %85 = load %struct.mscp*, %struct.mscp** %84, align 8
  %86 = load i32, i32* %8, align 4
  %87 = zext i32 %86 to i64
  %88 = getelementptr inbounds %struct.mscp, %struct.mscp* %85, i64 %87
  store %struct.mscp* %88, %struct.mscp** %10, align 8
  %89 = load %struct.mscp*, %struct.mscp** %10, align 8
  %90 = load i64, i64* @CP_TAIL_SIZE, align 8
  %91 = sub i64 56, %90
  %92 = call i32 @memset(%struct.mscp* %89, i32 0, i64 %91)
  %93 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %94 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %93, i32 0, i32 2
  %95 = load i32, i32* %94, align 8
  %96 = call i32 @H2DEV(i32 %95)
  %97 = load %struct.mscp*, %struct.mscp** %10, align 8
  %98 = getelementptr inbounds %struct.mscp, %struct.mscp* %97, i32 0, i32 11
  store i32 %96, i32* %98, align 4
  %99 = load void (%struct.scsi_cmnd*)*, void (%struct.scsi_cmnd*)** %5, align 8
  %100 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %101 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %100, i32 0, i32 1
  store void (%struct.scsi_cmnd*)* %99, void (%struct.scsi_cmnd*)** %101, align 8
  %102 = load i32, i32* %8, align 4
  %103 = load %struct.mscp*, %struct.mscp** %10, align 8
  %104 = getelementptr inbounds %struct.mscp, %struct.mscp* %103, i32 0, i32 0
  store i32 %102, i32* %104, align 8
  %105 = load %struct.mscp*, %struct.mscp** %10, align 8
  %106 = getelementptr inbounds %struct.mscp, %struct.mscp* %105, i32 0, i32 0
  %107 = bitcast i32* %106 to i8*
  %108 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %109 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %108, i32 0, i32 0
  store i8* %107, i8** %109, align 8
  %110 = load i64, i64* @do_trace, align 8
  %111 = icmp ne i64 %110, 0
  br i1 %111, label %112, label %120

112:                                              ; preds = %82
  %113 = load i32, i32* @KERN_INFO, align 4
  %114 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %115 = load i32, i32* %8, align 4
  %116 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %117 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %116, i32 0, i32 2
  %118 = load i32, i32* %117, align 8
  %119 = call i32 (i32, %struct.scsi_cmnd*, i8*, i32, ...) @scmd_printk(i32 %113, %struct.scsi_cmnd* %114, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i32 %115, i32 %118)
  br label %120

120:                                              ; preds = %112, %82
  %121 = load %struct.mscp*, %struct.mscp** %10, align 8
  %122 = getelementptr inbounds %struct.mscp, %struct.mscp* %121, i32 0, i32 1
  store i32 1, i32* %122, align 4
  %123 = load %struct.mscp*, %struct.mscp** %10, align 8
  %124 = getelementptr inbounds %struct.mscp, %struct.mscp* %123, i32 0, i32 2
  store i32 1, i32* %124, align 8
  %125 = load %struct.mscp*, %struct.mscp** %10, align 8
  %126 = getelementptr inbounds %struct.mscp, %struct.mscp* %125, i32 0, i32 4
  store i32 1, i32* %126, align 8
  %127 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %128 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %127, i32 0, i32 4
  %129 = load %struct.TYPE_2__*, %struct.TYPE_2__** %128, align 8
  %130 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %129, i32 0, i32 4
  %131 = load i32, i32* %130, align 4
  %132 = load %struct.mscp*, %struct.mscp** %10, align 8
  %133 = getelementptr inbounds %struct.mscp, %struct.mscp* %132, i32 0, i32 10
  store i32 %131, i32* %133, align 8
  %134 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %135 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %134, i32 0, i32 4
  %136 = load %struct.TYPE_2__*, %struct.TYPE_2__** %135, align 8
  %137 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %136, i32 0, i32 3
  %138 = load i32, i32* %137, align 8
  %139 = load %struct.mscp*, %struct.mscp** %10, align 8
  %140 = getelementptr inbounds %struct.mscp, %struct.mscp* %139, i32 0, i32 9
  store i32 %138, i32* %140, align 4
  %141 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %142 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %141, i32 0, i32 4
  %143 = load %struct.TYPE_2__*, %struct.TYPE_2__** %142, align 8
  %144 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %143, i32 0, i32 2
  %145 = load i32, i32* %144, align 4
  %146 = load %struct.mscp*, %struct.mscp** %10, align 8
  %147 = getelementptr inbounds %struct.mscp, %struct.mscp* %146, i32 0, i32 8
  store i32 %145, i32* %147, align 8
  %148 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %149 = load %struct.mscp*, %struct.mscp** %10, align 8
  %150 = getelementptr inbounds %struct.mscp, %struct.mscp* %149, i32 0, i32 7
  store %struct.scsi_cmnd* %148, %struct.scsi_cmnd** %150, align 8
  %151 = load %struct.mscp*, %struct.mscp** %10, align 8
  %152 = getelementptr inbounds %struct.mscp, %struct.mscp* %151, i32 0, i32 6
  %153 = load i32, i32* %152, align 8
  %154 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %155 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %154, i32 0, i32 6
  %156 = load i32, i32* %155, align 4
  %157 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %158 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %157, i32 0, i32 5
  %159 = load i32, i32* %158, align 8
  %160 = call i32 @memcpy(i32 %153, i32 %156, i32 %159)
  %161 = load i32, i32* %8, align 4
  %162 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %163 = call i32 @scsi_to_dev_dir(i32 %161, %struct.hostdata* %162)
  %164 = load i32, i32* %8, align 4
  %165 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %166 = call i32 @map_dma(i32 %164, %struct.hostdata* %165)
  %167 = load i64, i64* @linked_comm, align 8
  %168 = icmp ne i64 %167, 0
  br i1 %168, label %169, label %201

169:                                              ; preds = %120
  %170 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %171 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %170, i32 0, i32 4
  %172 = load %struct.TYPE_2__*, %struct.TYPE_2__** %171, align 8
  %173 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %172, i32 0, i32 1
  %174 = load i32, i32* %173, align 8
  %175 = icmp sgt i32 %174, 2
  br i1 %175, label %176, label %201

176:                                              ; preds = %169
  %177 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %178 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %177, i32 0, i32 4
  %179 = load %struct.TYPE_2__*, %struct.TYPE_2__** %178, align 8
  %180 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %179, i32 0, i32 0
  %181 = load i64, i64* %180, align 8
  %182 = call i64 @TLDEV(i64 %181)
  %183 = icmp ne i64 %182, 0
  br i1 %183, label %184, label %201

184:                                              ; preds = %176
  %185 = load i64, i64* @READY, align 8
  %186 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %187 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %186, i32 0, i32 1
  %188 = load i64*, i64** %187, align 8
  %189 = load i32, i32* %8, align 4
  %190 = zext i32 %189 to i64
  %191 = getelementptr inbounds i64, i64* %188, i64 %190
  store i64 %185, i64* %191, align 8
  %192 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %193 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %192, i32 0, i32 4
  %194 = load %struct.TYPE_2__*, %struct.TYPE_2__** %193, align 8
  %195 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %196 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %195, i32 0, i32 3
  %197 = load i32, i32* %196, align 4
  %198 = call i32 @blk_rq_pos(i32 %197)
  %199 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %200 = call i32 @flush_dev(%struct.TYPE_2__* %194, i32 %198, %struct.hostdata* %199, i32 0)
  store i32 0, i32* %3, align 4
  br label %231

201:                                              ; preds = %176, %169, %120
  %202 = load %struct.Scsi_Host*, %struct.Scsi_Host** %6, align 8
  %203 = getelementptr inbounds %struct.Scsi_Host, %struct.Scsi_Host* %202, i32 0, i32 1
  %204 = load i32, i32* %203, align 4
  %205 = load %struct.mscp*, %struct.mscp** %10, align 8
  %206 = getelementptr inbounds %struct.mscp, %struct.mscp* %205, i32 0, i32 5
  %207 = load i32, i32* %206, align 4
  %208 = load i32, i32* @SEND_CP_DMA, align 4
  %209 = call i64 @do_dma(i32 %204, i32 %207, i32 %208)
  %210 = icmp ne i64 %209, 0
  br i1 %210, label %211, label %223

211:                                              ; preds = %201
  %212 = load i32, i32* %8, align 4
  %213 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %214 = call i32 @unmap_dma(i32 %212, %struct.hostdata* %213)
  %215 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %216 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %215, i32 0, i32 0
  store i8* null, i8** %216, align 8
  %217 = load i32, i32* @KERN_INFO, align 4
  %218 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %219 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %4, align 8
  %220 = getelementptr inbounds %struct.scsi_cmnd, %struct.scsi_cmnd* %219, i32 0, i32 2
  %221 = load i32, i32* %220, align 8
  %222 = call i32 (i32, %struct.scsi_cmnd*, i8*, i32, ...) @scmd_printk(i32 %217, %struct.scsi_cmnd* %218, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i32 %221)
  store i32 1, i32* %3, align 4
  br label %231

223:                                              ; preds = %201
  %224 = load i64, i64* @IN_USE, align 8
  %225 = load %struct.hostdata*, %struct.hostdata** %7, align 8
  %226 = getelementptr inbounds %struct.hostdata, %struct.hostdata* %225, i32 0, i32 1
  %227 = load i64*, i64** %226, align 8
  %228 = load i32, i32* %8, align 4
  %229 = zext i32 %228 to i64
  %230 = getelementptr inbounds i64, i64* %227, i64 %229
  store i64 %224, i64* %230, align 8
  store i32 0, i32* %3, align 4
  br label %231

231:                                              ; preds = %223, %211, %184, %77
  %232 = load i32, i32* %3, align 4
  ret i32 %232
}

declare dso_local i32 @panic(i8*, i32, i32, %struct.scsi_cmnd*) #1

declare dso_local i32 @printk(i8*, i32) #1

declare dso_local i32 @memset(%struct.mscp*, i32, i64) #1

declare dso_local i32 @H2DEV(i32) #1

declare dso_local i32 @scmd_printk(i32, %struct.scsi_cmnd*, i8*, i32, ...) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @scsi_to_dev_dir(i32, %struct.hostdata*) #1

declare dso_local i32 @map_dma(i32, %struct.hostdata*) #1

declare dso_local i64 @TLDEV(i64) #1

declare dso_local i32 @flush_dev(%struct.TYPE_2__*, i32, %struct.hostdata*, i32) #1

declare dso_local i32 @blk_rq_pos(i32) #1

declare dso_local i64 @do_dma(i32, i32, i32) #1

declare dso_local i32 @unmap_dma(i32, %struct.hostdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
